WIP towards refactored introduction

--- a/static/bibliography.bib
+++ b/static/bibliography.bib
@@ -106,3 +106,13 @@
   year={2018},
   url={https://blog.openai.com/charter},
 }
+@article{tang2018complex,
+  title={Complex pattern selectivity in macaque primary visual cortex revealed by large-scale two-photon imaging},
+  author={Tang, Shiming and Lee, Tai Sing and Li, Ming and Zhang, Yimeng and Xu, Yue and Liu, Fang and Teo, Benjamin and Jiang, Hongfei},
+  journal={Current Biology},
+  volume={28},
+  number={1},
+  pages={38--48},
+  year={2018},
+  publisher={Elsevier}
+}
