--- a/static/bibliography.bib
+++ b/static/bibliography.bib
@@ -116,3 +116,12 @@
   year={2018},
   publisher={Elsevier}
 }
+@INPROCEEDINGS{imagenet5206848,
+  author={J. {Deng} and W. {Dong} and R. {Socher} and L. {Li} and  {Kai Li} and  {Li Fei-Fei}},
+  booktitle={2009 IEEE Conference on Computer Vision and Pattern Recognition},
+  title={ImageNet: A large-scale hierarchical image database},
+  year={2009},
+  volume={},
+  number={},
+  pages={248-255},
+  doi={10.1109/CVPR.2009.5206848}}
