--- a/static/bibliography.bib
+++ b/static/bibliography.bib
@@ -125,3 +125,53 @@
   number={},
   pages={248-255},
   doi={10.1109/CVPR.2009.5206848}}
+@inproceedings{szegedy2015going,
+  title={Going deeper with convolutions},
+  author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew and others},
+  year={2015},
+  organization={CVPR},
+  url={https://arxiv.org/pdf/1409.4842.pdf},
+  doi={10.1109/cvpr.2015.7298594}
+}
+@incollection{krizhevsky2012alexnet,
+  title = {ImageNet Classification with Deep Convolutional Neural Networks},
+  author = {Alex Krizhevsky and Sutskever, Ilya and Hinton, Geoffrey E},
+  booktitle = {Advances in Neural Information Processing Systems 25},
+  editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
+  pages = {1097--1105},
+  year = {2012},
+  publisher = {Curran Associates, Inc.},
+  url = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
+}
+@article{szegedyIV16,
+  author    = {Christian Szegedy and
+               Sergey Ioffe and
+               Vincent Vanhoucke},
+  title     = {Inception-v4, Inception-ResNet and the Impact of Residual Connections
+               on Learning},
+  journal   = {CoRR},
+  volume    = {abs/1602.07261},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1602.07261},
+  archivePrefix = {arXiv},
+  eprint    = {1602.07261},
+  timestamp = {Mon, 13 Aug 2018 16:48:39 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/SzegedyIV16.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+@article{kaiming2015resnet,
+  author    = {Kaiming He and
+               Xiangyu Zhang and
+               Shaoqing Ren and
+               Jian Sun},
+  title     = {Deep Residual Learning for Image Recognition},
+  journal   = {CoRR},
+  volume    = {abs/1512.03385},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1512.03385},
+  archivePrefix = {arXiv},
+  eprint    = {1512.03385},
+  timestamp = {Wed, 17 Apr 2019 17:23:45 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/HeZRS15.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
