Cite earlier Circuits work: Zoom In, Early Vision, and Curve Detectors

--- a/static/bibliography.bib
+++ b/static/bibliography.bib
@@ -175,3 +175,27 @@
   biburl    = {https://dblp.org/rec/journals/corr/HeZRS15.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+@article{olah2020an,
+  author = {Olah, Chris and Cammarata, Nick and Schubert, Ludwig and Goh, Gabriel and Petrov, Michael and Carter, Shan},
+  title = {An Overview of Early Vision in InceptionV1},
+  journal = {Distill},
+  year = {2020},
+  note = {https://distill.pub/2020/circuits/early-vision},
+  doi = {10.23915/distill.00024.002}
+}
+@article{olah2020zoom,
+  author = {Olah, Chris and Cammarata, Nick and Schubert, Ludwig and Goh, Gabriel and Petrov, Michael and Carter, Shan},
+  title = {Zoom In: An Introduction to Circuits},
+  journal = {Distill},
+  year = {2020},
+  note = {https://distill.pub/2020/circuits/zoom-in},
+  doi = {10.23915/distill.00024.001}
+}
+@article{cammarata2020curve,
+  author = {Cammarata, Nick and Goh, Gabriel and Carter, Shan and Schubert, Ludwig and Petrov, Michael and Olah, Chris},
+  title = {Curve Detectors},
+  journal = {Distill},
+  year = {2020},
+  note = {https://distill.pub/2020/circuits/curve-detectors},
+  doi = {10.23915/distill.00024.003}
+}
