Cite neuroscientists on tuning curves

--- a/static/bibliography.bib
+++ b/static/bibliography.bib
@@ -199,3 +199,25 @@
   note = {https://distill.pub/2020/circuits/curve-detectors},
   doi = {10.23915/distill.00024.003}
 }
+@article{pasupathy2001shape,
+  title={Shape representation in area V4: position-specific tuning for boundary conformation},
+  author={Pasupathy, Anitha and Connor, Charles E},
+  journal={Journal of neurophysiology},
+  volume={86},
+  number={5},
+  pages={2505--2519},
+  year={2001},
+  publisher={American Physiological Society Bethesda, MD}
+}
+@article {jiang2019discrete,
+	author = {Jiang, Rundong and Li, Ming and Tang, Shiming},
+	title = {Discrete neural clusters encode orientation, curvature and corners in macaque V4},
+	elocation-id = {808907},
+	year = {2019},
+	doi = {10.1101/808907},
+	publisher = {Cold Spring Harbor Laboratory},
+	abstract = {As an intermediate stage of the ventral visual pathway, V4 plays a crucial role in transforming basic orientation information into higher-ordered object representations. However, the neural mechanisms underlying the encoding of simple, complex and intermediate features in V4 remain poorly understood. Using two-photon calcium imaging in awake macaques, we recorded the responses of large populations of V4 neurons to thousands of natural images. To understand these high-dimensional data sets, we performed dimensional reduction analysis on the neuronal population responses. We found orthogonal dimensions encoding orientation and more complex features, with curves and corners represented separately. These distinct feature dimensions were encoded by spatially clustered subpopulations of neurons organized in iso-orientation and curvature domains. Using synthetic stimuli, we confirmed that curvature and corner selective neurons in V4 were tuned to integral features rather than combinations of local orientation compartments. Our results show that curves and corners are encoded by neurons clustered into functional domains separate from orientation. This functionally specific population architecture may serve to facilitate local computations that expedite more complex shape and object representations at higher levels of the ventral pathway.},
+	URL = {https://www.biorxiv.org/content/early/2019/10/20/808907},
+	eprint = {https://www.biorxiv.org/content/early/2019/10/20/808907.full.pdf},
+	journal = {bioRxiv}
+}
