--- a/static/bibliography.bib
+++ b/static/bibliography.bib
@@ -221,3 +221,18 @@
 	eprint = {https://www.biorxiv.org/content/early/2019/10/20/808907.full.pdf},
 	journal = {bioRxiv}
 }
+@article{yosinski2015understanding,
+  title={Understanding neural networks through deep visualization},
+  author={Yosinski, Jason and Clune, Jeff and Nguyen, Anh and Fuchs, Thomas and Lipson, Hod},
+  journal={arXiv preprint arXiv:1506.06579},
+  year={2015},
+  url={http://yosinski.com/media/papers/Yosinski__2015__ICML_DL__Understanding_Neural_Networks_Through_Deep_Visualization__.pdf}
+}
+@article{olah2017feature,
+  author = {Olah, Chris and Mordvintsev, Alexander and Schubert, Ludwig},
+  title = {Feature Visualization},
+  journal = {Distill},
+  year = {2017},
+  url = {https://distill.pub/2017/feature-visualization},
+  doi = {10.23915/distill.00007}
+}
