Cite Nguyen et al 2016 (multifaceted feature visualization)

--- a/static/bibliography.bib
+++ b/static/bibliography.bib
@@ -236,3 +236,10 @@
   url = {https://distill.pub/2017/feature-visualization},
   doi = {10.23915/distill.00007}
 }
+@article{nguyen2016multifaceted,
+  title={Multifaceted feature visualization: Uncovering the different types of features learned by each neuron in deep neural networks},
+  author={Nguyen, Anh and Yosinski, Jason and Clune, Jeff},
+  journal={arXiv preprint arXiv:1602.03616},
+  year={2016},
+  url={https://arxiv.org/pdf/1602.03616.pdf}
+}
