Cite Karpathy's early 'Visualizing and understanding recurrent networks' paper

--- a/static/bibliography.bib
+++ b/static/bibliography.bib
@@ -243,3 +243,10 @@
   year={2016},
   url={https://arxiv.org/pdf/1602.03616.pdf}
 }
+@article{karpathy2015visualizing,
+  title={Visualizing and understanding recurrent networks},
+  author={Karpathy, Andrej and Johnson, Justin and Fei-Fei, Li},
+  journal={arXiv preprint arXiv:1506.02078},
+  url={https://arxiv.org/pdf/1506.02078.pdf},
+  year={2015}
+}
