--- a/static/bibliography.bib
+++ b/static/bibliography.bib
@@ -250,3 +250,30 @@
   url={https://arxiv.org/pdf/1506.02078.pdf},
   year={2015}
 }
+@article{erhan2009visualizing,
+  title={Visualizing higher-layer features of a deep network},
+  author={Erhan, Dumitru and Bengio, Yoshua and Courville, Aaron and Vincent, Pascal},
+  journal={University of Montreal},
+  volume={1341},
+  pages={3},
+  year={2009},
+  url={https://www.researchgate.net/profile/Aaron_Courville/publication/265022827_Visualizing_Higher-Layer_Features_of_a_Deep_Network/links/53ff82b00cf24c81027da530.pdf}
+}
+@Article{pmid16993807,
+   Author="Adrian, E. D.  and Zotterman, Y. ",
+   Title="{{T}he impulses produced by sensory nerve endings: {P}art 3. {I}mpulses set up by {T}ouch and {P}ressure}",
+   Journal="J Physiol",
+   Year="1926",
+   Volume="61",
+   Number="4",
+   Pages="465--483",
+   Month="Aug"
+}
+@inproceedings{li2015convergent,
+  title={Convergent learning: Do different neural networks learn the same representations?},
+  author={Li, Yixuan and Yosinski, Jason and Clune, Jeff and Lipson, Hod and Hopcroft, John E},
+  booktitle={FE@ NIPS},
+  pages={196--212},
+  url={https://arxiv.org/pdf/1511.07543.pdf},
+  year={2015}
+}
