--- a/static/bibliography.bib
+++ b/static/bibliography.bib
@@ -259,16 +259,6 @@
   year={2009},
   url={https://www.researchgate.net/profile/Aaron_Courville/publication/265022827_Visualizing_Higher-Layer_Features_of_a_Deep_Network/links/53ff82b00cf24c81027da530.pdf}
 }
-@Article{pmid16993807,
-   Author="Adrian, E. D.  and Zotterman, Y. ",
-   Title="{{T}he impulses produced by sensory nerve endings: {P}art 3. {I}mpulses set up by {T}ouch and {P}ressure}",
-   Journal="J Physiol",
-   Year="1926",
-   Volume="61",
-   Number="4",
-   Pages="465--483",
-   Month="Aug"
-}
 @inproceedings{li2015convergent,
   title={Convergent learning: Do different neural networks learn the same representations?},
   author={Li, Yixuan and Yosinski, Jason and Clune, Jeff and Lipson, Hod and Hopcroft, John E},
@@ -276,4 +266,14 @@
   pages={196--212},
   url={https://arxiv.org/pdf/1511.07543.pdf},
   year={2015}
+}
+@article{hubel1962receptive,
+  title={Receptive fields, binocular interaction and functional architecture in the cat's visual cortex},
+  author={Hubel, David H and Wiesel, Torsten N},
+  journal={The Journal of physiology},
+  volume={160},
+  number={1},
+  pages={106--154},
+  year={1962},
+  publisher={Wiley Online Library}
 }
