Add one more citation on feature visualization
This one was extracted by looking at the Building Blocks of
Interpretability citations.

--- a/static/bibliography.bib
+++ b/static/bibliography.bib
@@ -277,3 +277,12 @@
   year={1962},
   publisher={Wiley Online Library}
 }
+@inproceedings{zeiler2014visualizing,
+  title={Visualizing and understanding convolutional networks},
+  author={Zeiler, Matthew D and Fergus, Rob},
+  booktitle={European conference on computer vision},
+  pages={818--833},
+  year={2014},
+  organization={Springer},
+  url={https://arxiv.org/pdf/1311.2901.pdf}
+}
